<resources>

    <string name="app_name">BYEte_Hunger_MobileApp</string>
    <string name="back_to_login">Back to login</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="enter_email_address">ENTER EMAIL ADDRESS</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address_below_and_click_send_to_receive_an_email_asking_to_change_your_password">Enter your email address below and click send to receive an email asking to change your password</string>
    <string name="privpolicy">   The Personal Information that is under our control must be kept up to date and secure. We have identified persons as being in charge of upholding our privacy policy.    \n\n   To provide you with the service you have requested, we collect, use, and disclose Personal Information. Before or at the time we acquire the information, the purposes for which we will use your personal information will be made clear. \n\n   In certain situations, such as when your name, address, and mobile number are provided as part of the donation process, the purposes for which information is collected may be clear and consent may be implied. Except as needed or permitted by law, knowledge and consent are necessary for the collection, use, or disclosure of Personal Information. \n\n   It is always your decision whether or not to give us your personal information. Your choice to withhold some information, however, can make it more difficult for us to help you. Except in cases where it\'s necessary for us to provide the service, we won\'t make you give your consent to the collection, use, or sharing of information before providing the service. \n\n   Security measures that are appropriate for the sensitivity level of the information will be used to protect personal information. We take all reasonable precautions to protect your Personal Information from any loss or unauthorized use, access or disclosure.</string>

    //Registration Main dropdown
    <string-array name="Options">
        <item>Organization</item>
        <item>Individual</item>
    </string-array>

    //Donation type dropdown
    <string-array name="DonationType">
        <item>Perishables</item>
        <item>Non-Perishables</item>
    </string-array>

</resources>