<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#208353"
    tools:context=".forgotPassword">

    <TextView
        android:id="@+id/textView_Forgot_ForgotPassword"
        android:layout_width="194dp"
        android:layout_height="71dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/forgot_password"
        android:textColor="#FFC91E"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5_ForgotPass_BackImage" />


    <TextView
        android:id="@+id/textView2_ForgotPass_BackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/back_to_login"
        android:textColor="#000000"
        android:textSize="14sp"
        android:translationZ="10dp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ForgotPass_Send"
        app:layout_constraintVertical_bias="0.715" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="393dp"
        android:layout_height="544dp"
        android:adjustViewBounds="false"
        android:background="@drawable/background_roundedcorners"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Forgot_ForgotPassword"
        app:layout_constraintVertical_bias="1.0"
        />

    <TextView
        android:id="@+id/textView_Forgot_EnterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/enter_email_address"
        android:textColor="#098348"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Forgot_ForgotPassword" />

    <EditText
        android:id="@+id/editText_Forgot_EmailAddress"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:translationZ="10dp"
        android:textColorHint="#646464"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Forgot_EnterEmail"
        />

    <Button
        android:id="@+id/button_ForgotPass_Send"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@drawable/yellowbutton_rounded_corners"
        android:text="Send"
        android:textColor="#FFFFFF"
        android:translationZ="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Forgot_EmailAddress"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/imageView5_ForgotPass_BackImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_your_email_address_below_and_click_send_to_receive_an_email_asking_to_change_your_password"
        android:textColor="#000000"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="108dp"
        android:alpha=".60"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/client_logo_png" />


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:alpha=".50"
        android:background="#FFC91E"
        android:ems="10"
        android:translationZ="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>